--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= link_to "New Order", new_order_path %>
+    <%= link_to "New Menu", new_menu_path %>
     <%= yield %>
   </body>
 </html>
